--- a/index.html
+++ b/index.html
@@ -3,28 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="styele.css" rel="stylesheet">
     <title>Atletas</title>
 </head>
 <body>
     <header>
-        Logo
-        <nav>
+        <!-- <nav>
             <li></li>
             <li></li>
             <li></li>
             <li></li>
             <li></li>
             <li></li>
-        </nav>
+        </nav> -->
     </header>
 
     <main>
-        <div>
-            Texto
+        <div id="texto">
+            <h2>Gerencie seus Vídeos</h2>
+            <p1>Gerencia de Forma eficiente os melhores criadores de vídeos dos canais obtendo relatórios de pontuações de forma simplificada.</p1>
         </div>
+        <button>Ver meus videos</button>
 
-        <div>
-            Publicidade
+        <div id="publicidade">
+            Área de publicidade
         </div>
     </main>
     
