--- a/login.html
+++ b/login.html
@@ -3,19 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="styele.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
-
+    <div class="backgroud">
+        <img src="./assets/atleta.png" alt="">
+    </div>
     <header>
-        Logo
+        <div class="logo">
+            <p>logo</p>
+        </div>
+        <div csslass="allcoutry">
+            <p>brasil</p>
+            <p>US</p>
+            <p>ESP</p>
+        </div>
+        
     </header>
 
     <div class="Login">
-        <label for=""></label>
-        <label for=""></label>
+        <label for="">
+            <input type="text" placeholder="Email">
+        </label>
+        <label for="">
+            <input type="text" placeholder="Senha">
+        </label>
         <button>Entrar</button>
+        <p>Não tem conta?</p> <a href="">Criar conta</a>
+        <a href="">Esqueci minha senha</a>
     </div>
 
     <section>
