--- a/login.html
+++ b/login.html
@@ -14,10 +14,10 @@
         <div class="logo">
             <p>logo</p>
         </div>
-        <div csslass="allcoutry">
-            <p>brasil</p>
-            <p>US</p>
-            <p>ESP</p>
+        <div csslass="allcountry">
+            <p class="pais">brasil</p>
+            <p class="pais">US</p>
+            <p class="pais">ESP</p>
         </div>
         
     </header>
