--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     <main>
         <div id="texto">
             <h2>Gerencie seus Vídeos</h2>
+
+        </div>
+        <div id="texto2">
             <p1>Gerencia de Forma eficiente os melhores criadores de vídeos dos canais obtendo relatórios de pontuações de forma simplificada.</p1>
         </div>
         <button>Ver meus videos</button>
