--- a/login.html
+++ b/login.html
@@ -23,15 +23,19 @@
     </header>
 
     <div class="Login">
-        <label for="">
-            <input type="text" placeholder="Email">
-        </label>
-        <label for="">
-            <input type="text" placeholder="Senha">
-        </label>
-        <button>Entrar</button>
-        <p>Não tem conta?</p> <a href="">Criar conta</a>
-        <a href="">Esqueci minha senha</a>
+        <form action="">
+            <label for="">
+                <input type="text" placeholder="Email">
+            </label>
+            <label for="">
+                <input type="text" placeholder="Senha">
+            </label>
+            <button>Entrar</button>
+            <p>Não tem conta?</p> <a href="">Criar conta</a>
+            <a href="">Esqueci minha senha</a>
+        </form>
+        
+        
     </div>
 
     <section>
