--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
 </head>
 <body>
     <header>
-        <!-- <nav>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-        </nav> -->
+        <nav>
+            <ul>
+                <li>Sobre</li>
+                <li>Onde?</li>
+                <li>Clientes</li>
+                <li>Blog</li>
+                <li>Preços</li>
+                <li><a href="login.html">Login</a></li>
+            </ul>
+        </nav> 
     </header>
 
     <main>
