--- a/login.html
+++ b/login.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <img src="./assets/bandeira-do-brasil.png" width="30px">
+        <img src="./assets/us.png" width="30px">
+        <img src="./assets/ESP.webp" width="30px">
+    </header>
     
     <div class="main">
         <input type="checkbox" id="chk" aria-hidden="true">
@@ -26,6 +31,7 @@
                 <input type="email" name="email" placeholder="Email">
                 <input type="password" name="pswd" placeholder="Senha">
                 <button>Iniciar</button>
+                <a>Esqueceu sua senha?</a>
             </form>
         </div>
     </div>
