--- a/index.html
+++ b/index.html
@@ -8,26 +8,24 @@
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
-                <li>Sobre</li>
-                <li>Onde?</li>
-                <li>Clientes</li>
-                <li>Blog</li>
-                <li>Preços</li>
-                <li><a href="login.html">Login</a></li>
-            </ul>
-        </nav> 
+        <img id="logo">
+        <a>Sobre</a>
+        <a>Onde?</a>
+        <a>Clientes</a>
+        <a>Blog</a>
+        <a>Preços</a>
+        <a href="login.html">Login</a>
     </header>
 
     <main>
         <div id="texto">
             <h2>Gerencie seus Vídeos</h2>
-
         </div>
+
         <div id="texto2">
             <p1>Gerencia de Forma eficiente os melhores criadores de vídeos dos canais obtendo relatórios de pontuações de forma simplificada.</p1>
         </div>
+
         <button>Ver meus videos</button>
 
         <div id="publicidade">
