--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <a>Blog</a>
         <a>Preços</a>
         <a href="login.html">Login</a>
+        <div>
+            dsfdsefaefafe
+        </div>
     </header>
 
     <main>
