--- a/html/login.html
+++ b/html/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="/style.css">
     <title>Document</title>
 </head>
 <body class="corpo">
@@ -49,5 +49,5 @@
         publicidade
     </section>
 </body>
-<script src="/js/script.js"></script>
+<script src="script.js"></script>
 </html>
