--- a/html/login.html
+++ b/html/login.html
@@ -3,16 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/css/style.css" rel="stylesheet">
+    <link href="/style.css" rel="stylesheet">
     <title>Document</title>
 </head>
 <body class="corpo">
     <header>
-        <img src="./assets/bandeira-do-brasil.png" width="30px">
-        <img src="./assets/us.png" width="30px">
-        <img src="./assets/ESP.webp" width="30px">
+        <img src="/assets/bandeira-do-brasil.png" width="30px">
+        <img src="/assets/us.png" width="30px">
+        <img src="/assets/ESP.webp" width="30px">
     </header>
-    
     <div class="main">
         <input type="checkbox" id="chk" aria-hidden="true">
     
