--- a/html/login.html
+++ b/html/login.html
@@ -8,9 +8,9 @@
 </head>
 <body class="corpo">
     <header>
-        <img src="./assets/bandeira-do-brasil.png" width="30px">
-        <img src="./assets/us.png" width="30px">
-        <img src="./assets/ESP.webp" width="30px">
+        <img src="/assets/bandeira-do-brasil.png" width="30px">
+        <img src="/assets/us.png" width="30px">
+        <img src="/assets/ESP.webp" width="30px">
     </header>
     
     <div class="main">
@@ -49,5 +49,5 @@
         publicidade
     </section>
 </body>
-<script src="script.js"></script>
+<script src="/script.js"></script>
 </html>
