--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/styele.css" rel="stylesheet">
+    <link href="/sobre.css" rel="stylesheet">
     <title>Atletas</title>
 </head>
 <body>
