--- a/html/login.html
+++ b/html/login.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/login.css">
     <title>Document</title>
 </head>
-<body class="corpo">
+<body class="body">
     <header>
         <img src="/assets/bandeira-do-brasil.png" width="30px">
         <img src="/assets/us.png" width="30px">
@@ -41,6 +41,7 @@
             <input type="email" name="email" placeholder="Digite o email cadastrado">
             <button>Enviar Código</button>
         </form>
+        
     </div>
     
 
