--- a/html/usuarios.html
+++ b/html/usuarios.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/usuarios.css">
+    <link rel="stylesheet" href="/css/usuarios.css">
     <title>Usuarios</title>
 </head>
 <body>
@@ -25,6 +25,7 @@
             class="user">
         </div>
     </header>
+
     <main>
         
         <div class="dono-da-conta">
