--- a/html/gestao_canal.html
+++ b/html/gestao_canal.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="/gestao_canal.css">
+    <link rel="stylesheet" href="/css/gestao_canal.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
 </head>
+
 <body>
     <nav class="side">
         <div class="btn-expandir">
@@ -46,7 +46,6 @@
             class="user">
         </div>
     </header>
-
 
     <script src="/menu-lateral.js"></script>
 </body>
