--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/sobre.css" rel="stylesheet">
+    <link href="/css/sobre.css" rel="stylesheet">
     <title>Atletas</title>
 </head>
 <body>
@@ -14,10 +14,7 @@
         <a>Clientes</a>
         <a>Blog</a>
         <a>Preços</a>
-        <a href="login.html">Login</a>
-        <div>
-            dsfdsefaefafe
-        </div>
+        <a href="login.html">Login</a>>
     </header>
 
     <main>
